--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body{
 .orange-color{
     color: orange;font-size: 30px;
 }
-section{
+.flaxyble-contsiner{
     display: flex;
     padding: 40px 40px;
     margin-bottom: 100px;
@@ -43,4 +43,26 @@ border-radius: 5px;
 .big-color{
     color: red;
 font-weight: bold;
+}
+.experiment-area{
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+}
+.shadow-area{
+    width: 40%;
+    margin-left: 5%;
+    margin-right: 5%;
+    box-shadow: 10px 10px 40px green;
+    padding: 15px 15px;
+    border-left: 5px solid red;
+
+}
+.mehedi{
+    width: 40%;
+    margin-left: 5%;
+    margin-right: 5%;
+    box-shadow: 10px 10px 40px green;
+    padding: 15px 15px;
+    border-left: 5px solid gray;
 }
